# MauEng

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Config.cmake  Readme.md  launch.vs.json
Engine/: CMakeLists.txt
Engine/Audio/: CMakeLists.txt
Engine/Audio/Private/: NullSoundSystem.h  SoundSystemFactory.cpp
Engine/Audio/Public/: Defines.h  SoundSystem.h  SoundSystemFactory.h
Engine/Audio/Wwise/: CMakeLists.txt
Engine/Audio/Wwise/Private/: WwiseSoundSystem.cpp
Engine/Audio/Wwise/Public/: WwiseSoundSystem.h
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: ConsoleLogger.cpp  CoreServiceLocator.cpp  FileLogger.cpp  Logger.cpp
Engine/Core/Private/Asserts/: AsseertsInternal.h  Asserts.cpp
Engine/Core/Private/Events/: Delegate.cpp  EventManager.cpp
Engine/Core/Private/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  LogCategories.cpp  Logger.cpp  LoggerFactory.cpp  NullLogger.h
Engine/Core/Private/Profiling/: GoogleProfiler.cpp  GoogleProfiler.h  Instrumentor.cpp  InstrumentorTimer.cpp  NullProfiler.h  OptickProfiler.cpp  OptickProfiler.h  Profiler.cpp
Engine/Core/Private/Timer/: TimerManager.cpp
Engine/Core/Public/: ConsoleLogger.h  CorePCH.h  CoreServiceLocator.h  FileLogger.h  GameTime.h  Logger.h  Singleton.h
Engine/Core/Public/Asserts/: Asserts.h
Engine/Core/Public/Config/: Config.cmake  EngineConfig.h
Engine/Core/Public/Events/: DeferredEvent.h  Delegate.h  DelegateDelayedUnSubscription.h  EventManager.h  ListenerHandle.h  ListenerHandlers.h
Engine/Core/Public/Logger/: LogCategories.h  Logger.h  LoggerFactory.h
Engine/Core/Public/Math/: Rotator.h
Engine/Core/Public/Profiling/: Instrumentor.h  InstrumentorTimer.h  Profiler.h
Engine/Core/Public/Timer/: TimerManager.h
Engine/Core/Shared/: AssertsInternal.h
Engine/ECS/: CMakeLists.txt
Engine/ECS/Private/: ECSWorld.cpp  Entity.cpp  EnttImpl.h
Engine/ECS/Public/: ECSWorld.h  Entity.h  EntityID.h  EnttImpl.h  Group.h  View.h
Engine/MauEng/: CMakeLists.txt
Engine/MauEng/Libs/: CMakeLists.txt
Engine/MauEng/Private/: Engine.cpp  EnginePCH.h  Entity.cpp  InternalServiceLocator.cpp  InternalServiceLocator.h  ServiceLocator.cpp
Engine/MauEng/Private/Components/: CLight.cpp  CStaticMesh.cpp
Engine/MauEng/Private/GUI/: GUILayer.h  ImGUILayer.cpp  ImGUILayer.h  NullGUILayer.h
Engine/MauEng/Private/ImGUI/: ImGUILayer.h
Engine/MauEng/Private/Input/: InputManager.cpp  Player.cpp
Engine/MauEng/Private/Logging/: ImGUILogger.cpp  ImGUILogger.h
Engine/MauEng/Private/Scene/: Camera.cpp  CameraManager.cpp  Scene.cpp  SceneManager.cpp
Engine/MauEng/Private/Window/: SDLWindow.cpp  SDLWindow.h
Engine/MauEng/Public/: Engine.h  Entity.h  PCH.h  ServiceLocator.h
Engine/MauEng/Public/Components/: CDebugText.h  CLight.h  CStaticMesh.h  CTransform.h
Engine/MauEng/Public/Events/: InputEvent.h
Engine/MauEng/Public/Input/: GamepadInfo.h  InputManager.h  KeyInfo.h  KeyboardKey.h  Player.h
Engine/MauEng/Public/Scene/: Camera.h  CameraManager.h  Scene.h  SceneManager.h
Engine/Private/: Camera.cpp  Engine.cpp  EnginePCH.h
Engine/Private/Core/: GLFWWindow.cpp  GLFWWindow.h  SDLWindow.cpp  SDLWindow.h
Engine/Private/Input/: InputManager.cpp
Engine/Private/Scene/: Camera.cpp  CameraManager.cpp  SceneManager.cpp
Engine/Public/: Camera.h  Engine.h  GameTime.h  ServiceLocator.h
Engine/Public/Config/: EngineConfig.h
Engine/Public/Input/: InputManager.h  KeyInfo.h  MouseInfo.h
Engine/Public/Scene/: Camera.h  CameraManager.h  Scene.h  SceneManager.h
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Config/: VulkanConfig.h
Engine/Renderer/Private/: DebugRenderer.cpp  InternalDebugRenderer.cpp  Material.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  NullRenderer.h  Renderer.cpp  RendererFactory.cpp  RendererPCH.cpp  RendererPCH.h  Utils.cpp  Utils.h  Vertex.h  VulkanDebugContext.cpp  VulkanDebugContext.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstanceContext.h  VulkanQueueManager.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurfaceContext.h  VulkanSwapchainContext.h
Engine/Renderer/Private/Assets/: BindlessData.h  ImageLoader.cpp  ImageLoader.h  Light.h  LoadedModel.h  Material.h  ModelLoader.cpp  ModelLoader.h
Engine/Renderer/Private/DebugRenderer/: DebugVertex.h  InternalDebugRenderer.cpp  InternalDebugRenderer.h
Engine/Renderer/Private/Vulkan/: Utils.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPoolManager.cpp  VulkanCommandPoolManager.h  VulkanDebugContext.cpp  VulkanDebugContext.h  VulkanDescriptorContext.cpp  VulkanDescriptorContext.h  VulkanDeviceContext.cpp  VulkanDeviceContext.h  VulkanDeviceContextManager.cpp  VulkanDeviceContextManager.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipelineContext.cpp  VulkanGraphicsPipelineContext.h  VulkanImage.cpp  VulkanImage.h  VulkanInstanceContext.cpp  VulkanInstanceContext.h  VulkanMaterial.h  VulkanMaterialManager.cpp  VulkanMaterialManager.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshManager.cpp  VulkanMeshManager.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSurfaceContext.h  VulkanSwapchainContext.h  VulkanSwapchaincontext.cpp  VulkanTexture.cpp  VulkanTexture.h  VulkanTextureManager.cpp  VulkanTextureManager.h  VulkanUtils.h
Engine/Renderer/Public/: DebugRenderer.h  DebugVertex.h  InternalDebugRenderer.h  Material.h  Mesh.h  MeshInstance.h  NullDebugRenderer.h  Renderer.h  RendererFactory.h  RendererIdentifiers.h  Vertex.h
Engine/Renderer/Shared/: BindlessData.h  MeshInstance.h  Renderer.h  RendererFactory.h
Game/: CMakeLists.txt
Game/Private/: CustomPlayerClass.cpp  CustomPlayerClass.h  DebugDrawingDemo.cpp  DebugDrawingDemo.h  DemoScene.cpp  DemoScene.h  ECSTestScene.cpp  ECSTestScene.h  GameScene.cpp  GameScene.h  main.cpp
Libs/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/src/Math/: TestRotator.cpp
Tests/src/Transform/: TestTransforms.cpp
VulkanProject/: CMakeLists.txt
VulkanProject/src/private/: main.cpp
(+38 files in other folders)
